# ups-ml-football-player-value

./: .gitignore  Dockerfile  PlayerMarketValue.ipynb  PlayerMarketValuePrediction.html  PlayerMarketValuePrediction.ipynb  PlayerMarketValuePrediction_Charbel_Abi_Hana.ipynb  README.md  Untitled.ipynb  dcereijo-player-scores.dvc  environment.yml  pyproject.toml
.dvc/: config
dcereijo-player-scores/: clubs
