[tool.poetry]
name = "ups-ml-football-player-value"
version = "0.1.0"
description = "Football player transfer market value prediction using data.world transfermarkt dataset"
authors = ["Charbel Abi Hana <charbel-a-h@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.0.2"
scikit-image = "^0.19.2"
numpy = "^1.22.3"
matplotlib = "^3.5.2"
jupyter = "^1.0.0"
pandas = "^1.4.2"
seaborn = "^0.11.2"
dvc = {extras = ["s3"], version = "^2.27.2"}
dvc-gdrive = "^2.19.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
